kubernetes/common/deployment.yaml
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'fms-web'
  namespace: 'service'
  labels:
    app-type: 'fms-web'
spec:
  replicas: 3
  selector:
    matchLabels:
      app-type: 'fms-web'
  template:
    metadata:
      labels:
        app-type: 'fms-web'
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: service
      containers:
        - name: 'fms-web'
          image: __FULL_IMAGE_NAME__
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5 # 1초에서 5초로 증가
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 60 # 30초에서 60초로 증가
            periodSeconds: 30
            timeoutSeconds: 5 # timeout 추가
